// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutputPane matches snapshot 1`] = `
<div
  className="outputpane module-ok"
>
  <Connect(OutputIframe)
    deltaId={1}
    isPublic={false}
    key="iframe"
    visible={false}
    wfModuleId={987}
    workflowId={123}
  />
  <DelayedTableSwitcher
    deltaId={1}
    isReadOnly={false}
    key="table"
    loadRows={[MockFunction]}
    status="ok"
    wfModuleId={987}
  />
</div>
`;

exports[`OutputPane renders when no module id 1`] = `
<div
  className="outputpane module-unreachable"
>
  <Connect(OutputIframe)
    deltaId={null}
    isPublic={false}
    key="iframe"
    visible={false}
    wfModuleId={null}
    workflowId={123}
  />
  <DelayedTableSwitcher
    columns={null}
    deltaId={null}
    isReadOnly={false}
    key="table"
    loadRows={[MockFunction]}
    nRows={null}
    status={null}
    wfModuleId={null}
  />
</div>
`;
